bunch of sonarlint fixes